[FEATURE] retrieve stock route flow using db
