# src/main/java/com/piotr/stock/streaming/model/ApiRequestParams.java
@@ -1,0 +1,3 @@
+package com.piotr.stock.streaming.model;
+
+public record ApiRequestParams(String ticker, String stockType, String exchange) {}
