# src/main/resources/openapi/API-contract.yaml
@@ -74,14 +74,11 @@ definitions:
   Stock:
     type: "object"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       ticker:
         type: "string"
-      stockType:
+      quoteType:
         type: "string"
-      exchange:
+      stockMarket:
         type: "string"
       price:
         type: "number"
